--- a/index.html
+++ b/index.html
@@ -2,26 +2,116 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">   
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <title>Imran's Portfolio Website</title>
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.00/normalize.min.css">
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+    integrity="sha256-46qynGAkLSFpVbEBog43gvNhfr0j+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
+    
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" href="main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
+<Header>
+  <div class="logo">
+      <img src="Assets/logo.jpg" alt="">
+  </div>
+  <button class="nav-toggle" aria-label="toggle navigation">
+    <span class="hamburger"></span>
+  </button>
+  <nav class="nav">
+    <ul class="nav__list">
+      <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+      <li class="nav__item"><a href="#" class="nav__link">About Me</a></li>
+      <li class="nav__item"><a href="#" class="nav__link">Projects</a></li>
+      <li class="nav__item"><a href="#" class="nav__link">Contact Me</a></li>
+      <li class="nav__item"><a href="Assets/Resume.pdf" class="nav__link">Resume</a></li>
+    </ul>
+  </nav>
+</Header>
+    <!-- Introduction-->
+    <Section class="intro" id="home">
+      <h1 class="section__title section__title--intro">
+        Hi, I am <strong>Imran Zaveri<strong>
+      </h1>
+      <p class="section__subtitle section__subtitle--intro">Software Developer</p>
+      <img src="Assets/imrazave.png" alt="a picture of Imran">
+    </Section>
 
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
+    <!-- About Me -->
+    <section class="about-me" id="about">
+      <h2 class="section__title section__title--about">Who I am</h2>
+      <p class="section__subtitle section__subtitle--about"></p>
+
+      <div class="about-me__body">
+        <p>Macaroon cheesecake marshmallow. Chocolate dessert bonbon pastry brownie pudding caramels. Marshmallow chocolate sesame snaps topping chupa chups gummi bears. Bonbon sweet roll bear claw candy canes biscuit. Pie toffee tootsie roll icing. Topping danish caramels croissant liquorice ice cream tart pastry cake. Croissant halvah tart cheesecake dragée jelly-o liquorice liquorice. Marshmallow halvah chocolate bar cake soufflé lemon drops tiramisu. Jujubes sweet roll macaroon cake liquorice tootsie roll bonbon toffee. Bear claw cake jelly beans marzipan. Caramels lollipop pudding macaroon sweet roll marshmallow chupa chups sugar plum icing. Chocolate cotton candy ice cream marshmallow jelly pastry gummies lemon drops soufflé. Muffin soufflé bonbon marshmallow chocolate cake jelly apple pie.</p>
+        
+        <p>Macaroon cheesecake marshmallow. Chocolate dessert bonbon pastry brownie pudding caramels. Marshmallow chocolate sesame snaps topping chupa chups gummi bears. Bonbon sweet roll bear claw candy canes biscuit. Pie toffee tootsie roll icing. Topping danish caramels croissant liquorice ice cream tart pastry cake. Croissant halvah tart cheesecake dragée jelly-o liquorice liquorice. Marshmallow halvah chocolate bar cake soufflé lemon drops tiramisu. Jujubes sweet roll macaroon cake liquorice tootsie roll bonbon toffee. Bear claw cake jelly beans marzipan. Caramels lollipop pudding macaroon sweet roll marshmallow chupa chups sugar plum icing. Chocolate cotton candy ice cream marshmallow jelly pastry gummies lemon drops soufflé. Muffin soufflé bonbon marshmallow chocolate cake jelly apple pie.</p>
       </div>
 
+      <img src="Assets/Imran2.PNG" alt="Imran at work">
 
+    <!-- My Work-->
+    <section class="my-work" id="work">
+      <h2 class="section__title">My work</h2>
+      <p class="section__subtitle"></p>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script> 
+      <div class="portfolio">
+        <!--Static Storefront-->
+        <a href="https://imrazave.github.io/widgetsrus/" class="portfolio__item">
+          <img src="Assets/Static_Storefront.JPG" alt="" class="portfolio__img">
+        </a>
+
+        <!--Creature-->
+        <a href="#" class="portfolio__item">
+          <img src="Assets/Creature.JPG" alt="" class="portfolio__img">
+        </a>
+
+        <!--Business Challenges-->
+        <a href="https://github.com/imrazave/goldbadgechallenges" class="portfolio__item">
+          <img src="Assets/Business_Challenges.JPG" alt="" class="portfolio__img">
+        </a>
+
+        <!--TvDinner-->
+        <a href="https://github.com/MichaelShepard/TvDinner" class="portfolio__item">
+          <img src="Assets/TvDinner.JPG" alt="" class="portfolio__img">
+        </a>
+
+        <!--Avia8r-->
+        <a href="https://github.com/imrazave/Avia8r" class="portfolio__item">
+          <img src="Assets/Avia8r.JPG" alt="" class="portfolio__img">
+        </a>
+      </section>
+    </div> 
+
+    <!-- Footer -->
+    <footer>
+      <a href="mailto:imrazave@gmail.com" class="footer__link">imrazave@gmail.com</a>
+      <ul class="social-list">
+        <li class="social-list__item"><a class="social-list__link"
+          href="https://facebook.com">fb</a></li>
+      </ul>
+    </footer>
+
+    <!-- Contact -->
+    <form
+  action="https://formspree.io/f/mpzkpwae"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="_replyto">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+
+  <!-- your other form fields go here -->
+
+  <button type="submit">Send</button>
+</form>
 </body>
 </html>
